manifests/ComfyUI/comfyui_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui-service
  labels:
    app: comfyui
spec:
  selector:
    app: comfyui
  ports:
  - port: 8848
    protocol: TCP
    targetPort: 8848
  type: NodePort
